Fix(UI): Navbar UI Not Responsive

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -11,12 +11,16 @@ body {
 }
 
 header {
-  @apply sticky z-50 top-[-20px] transition-all;
+  @apply sticky z-50 top-[-20px];
 }
 
 nav,
 footer {
   @apply dark:bg-gray-900 px-0 shadow-none !important;
+}
+
+nav > div.mx-auto.flex.flex-wrap.items-center.justify-between {
+  @apply px-6;
 }
 
 .footer-icon {
